# muscle3-dashboard

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
muscle3_dashboard/: cli.py  constants.py  dashboard.py  data_manager.py  instances.py  panel_util.py  pathlink.py  reactive.py  ymmsl_graph.py
muscle3_dashboard/components/: component_summary.py  crash_analysis.py  log_files.py  log_messages_table.py  overview.py  profiling_information.py  status_table.py  web_uis.py  ymmsl_graph.py
muscle3_dashboard/loganalyzer/: base.py  manager.py  stderr.py  stdout.py
muscle3_dashboard/m3dash/: app.py  cli.py  discovery.py  harvest.py  logviewer.py  mux.py  proxy.py
tests/: test_log_analyzer_components.py  test_log_analyzer_manager.py  test_m3dash_cli.py  test_m3dash_discovery.py  test_m3dash_harvest.py  test_m3dash_mux.py  test_m3dash_proxy.py  test_version.py
tests/assets/run-accumulator/: configuration.ymmsl  performance.sqlite
tests/assets/run-accumulator/instances/accumulator/: stderr.txt
tests/assets/run-accumulator/instances/accumulator_optional_port/: run_script.sh  stderr.txt
tests/assets/run-accumulator/instances/sink/: stderr.txt
tests/assets/run-accumulator/instances/sink_optional_port/: run_script.sh  stderr.txt
tests/assets/run-accumulator/instances/source/: run_script.sh  stderr.txt  stdout.txt
tests/assets/run-chease/: configuration.ymmsl  performance.sqlite
tests/assets/run-chease/instances/chease/: run_script.sh  stderr.txt
