[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "muscle3-dashboard"
description = "Panel dashboard for MUSCLE3 simulations"
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
    {name = "Iris van der Werf", email = "ivanderwerf@ignitioncomputing.com"},
    {name = "Maarten Sebregts", email = "msebregts@ignitioncomputing.com"},
]
classifiers = [
]
license = {file = "LICENSE.txt"}
dependencies = [
    "click",
    "panel",
]
dynamic = ["version"]
requires-python = ">=3.11"

[project.optional-dependencies]
graph = [
    # Renders the simulation graph card from configuration.ymmsl.
    # Not on PyPI yet (depends on an unreleased ymmsl-python); pulled from git.
    "ymmsl2svg @ git+https://github.com/DaanVanVugt/ymmsl2svg.git@feat/conduit-hover-labels",
]
dev = [
    "ruff",
    "pytest",
    "pytest-cov",
]

[project.urls]
homepage = "https://github.com/multiscale/muscle3-dashboard"

[tool.setuptools.packages.find]
where = ["."]
include = ["muscle3_dashboard*"]

[project.scripts]
muscle_dashboard = "muscle3_dashboard.cli:main"
m3dash = "muscle3_dashboard.m3dash.cli:main"

[tool.setuptools_scm]
local_scheme = "no-local-version"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.ruff]
include = ["pyproject.toml", "muscle3_dashboard/**/*.py", "tests/**/*.py"]
exclude = [
    "docs",
    ".git",
]
# Same as Black
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
